--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "travel-watch",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "start": "bun index.ts"
+  },  
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "bun-types": "latest",
-    "drizzle-kit": "^0.20.4"
+    "drizzle-kit": "^0.20.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
